--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,33 +5,13 @@
     list-style: none;
 }
 
-.container {
-    width: 1200px;
-    margin: 0 auto;
-}
-
-.topo-barra-superior {
+.top-bar {
     background: #EEEEEE;
     height: 50px;
+    padding: 10px 0 10px;
 }
 
-.topo-menu {
-    background: #fff;
-    height: 100px;
+.direita {
+    float: right
 }
 
-.topo-menu h1 {
-    float: left;
-}
-
-.menu {
-    float: right;
-}
-
-.menu li {
-    display: inline;
-}
-
-.clear {
-    clear: both;
-}
