--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,11 @@
 .top-bar {
   background: #EEEEEE;
   height: 50px;
-  padding: 10px 0 10px; }
+  padding: 15px 0 10px;
+  color: #333; }
 
 .direita {
   float: right; }
+
+.menu h1 {
+  color: #007BFF; }
