--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,10 +8,16 @@
 .top-bar {
     background: #EEEEEE;
     height: 50px;
-    padding: 10px 0 10px;
+    padding: 15px 0 10px;
+    color: #333;
 }
 
 .direita {
     float: right
 }
+
+.menu h1 {
+    color: #007BFF; 
+}
+
 
