--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -35,9 +35,19 @@
     font-size: 18px;
 }
 
-.jumbotron {
-    
+.menu-img{
+    background-size: cover;
+    background-image: center center;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    height: 100vh;
+    min-height: 600px;
 }
+
+.teste {
+    margin-top: 50px;
+}
+
 
 
 
