--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,61 +1,65 @@
 * {
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
 }
 
 .container {
-    width: 1200px;
-    margin: 0 auto;
+  width: 1200px;
+  margin: 0 auto;
 }
 
 .top-bar {
-    background: #EEEEEE;
-    height: 50px;
-    padding: 15px 0 10px;
-    color: #333;
+  background: #EEEEEE;
+  height: 50px;
+  padding: 15px 0 10px;
+  color: #333;
 }
 
 .direita {
-    float: right
+  float: right
 }
 
 .navbar {
-    height: 100px;
+  height: 100px;
 }
 
 .navbar-brand {
-    color: #007BFF;
-    font-size: 30px;
-    font-weight: 700;
+  color: #007BFF;
+  font-size: 30px;
+  font-weight: 700;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
-    padding-right: 1.5rem; 
+  padding-right: 1.5rem; 
 }
 
 .nav-item {
-    color:#333333;
-    font-size: 18px;
+  color:#333333;
+  font-size: 18px;
 }
 
 .menu-img{
-    background-size: cover;
-    background-image: center center;
-    background-repeat: no-repeat;
-    overflow: hidden;
-    height: 100vh;
-    min-height: 600px;
+  background-size: cover;
+  background-image: center center;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  height: 100vh;
+  min-height: 600px;
+}
+
+.feature {
+  background-color: #fff;
 }
 
 .coluna {
 	float:left;
 	position:relative;
-    text-align:center;
-    width: 330px;
-    margin: 0 10px 40px;
-    padding-top: 100px;
+  text-align:center;
+  width: 330px;
+  margin: 0 10px 40px;
+  padding: 100px 0 100px 0;
 }
 
 .coluna + .coluna {
@@ -63,30 +67,46 @@
 } 
 
 /*.feature h2 {
-    color: red;
-    font-size: 30px;
-    line-height: 24px;
-    text-align: center;
-    padding: 75px 0 0 0;
+  color: red;
+  font-size: 30px;
+  line-height: 24px;
+  text-align: center;
+  padding: 75px 0 0 0;
  } */
 
+
 .feature h3 {
-    font-family: 'Montserrat', sans-serif;
-    color: #007BFF;
-    line-height: 24px;
-    font-size: 24px;
-    padding-top: 50px;
-    text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  color: #007BFF;
+  line-height: 24px;
+  font-size: 24px;
+  padding-top: 50px;
+  text-transform: uppercase;
 }
 
 .feature p {
-    font-family: 'Lato', sans-serif;
-    color: #999999;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 26px;
-    padding-top: 15px;
+  font-family: 'Lato', sans-serif;
+  color: #999999;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 26px;
+  padding-top: 15px;
 }
 
+.services {
+  border: 4px solid #007BFF;
+}
+
+.fundo-services h2 {
+  font-size: 50px;
+  text-align: center;
+  color: #007BFF;
+}
+
+.fundo-services p {
+  font-size: 18px;
+  color: #999999;
+  text-align: center;
+}
 
 
