--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -48,3 +48,10 @@
   text-align: center;
   font-family: $font;
 }
+
+.services p {
+  font-family: $font;
+  color: $cinza-texto;
+  text-align: center;
+  margin: 10px;
+}
