--- a/src/sass/conf.scss
+++ b/src/sass/conf.scss
@@ -6,6 +6,10 @@
   list-style: none;
 }
 
+.clear { 	
+  clear: both; 
+}
+
 //CORES ------------------
 $azul-texto: #007BFF;
 $cinza-texto: #999999;
