--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,9 @@
   text-decoration: none;
   list-style: none; }
 
+.clear {
+  clear: both; }
+
 .container {
   width: 1200px;
   margin: 0 auto; }
@@ -19,33 +22,23 @@
   width: 330px;
   margin: 0 10px 40px;
   padding: 100px 0 100px 0; }
-
-.coluna + .coluna {
-  margin-left: 40px; }
-
-.coluna h3 {
-  font-family: "Raleway", sans-serif;
-  font-size: 22,4px;
-  color: #007BFF;
-  margin: 20px; }
-
-.coluna p {
-  font-family: "Raleway", sans-serif;
-  color: #999999;
-  margin: 10px; }
+  .coluna + .coluna {
+    margin-left: 40px; }
+  .coluna h3 {
+    font-family: "Raleway", sans-serif;
+    font-size: 22,4px;
+    color: #007BFF;
+    margin: 20px; }
+  .coluna p {
+    font-family: "Raleway", sans-serif;
+    color: #999999;
+    margin: 10px; }
 
 .services {
   background-color: #F6F5F5;
   padding-top: 60px; }
-
-.services h2 {
-  font-size: 48px;
-  color: #007BFF;
-  text-align: center;
-  font-family: "Raleway", sans-serif; }
-
-.services p {
-  font-family: "Raleway", sans-serif;
-  color: #999999;
-  text-align: center;
-  margin: 10px; }
+  .services h2 {
+    font-size: 48px;
+    color: #007BFF;
+    text-align: center;
+    font-family: "Raleway", sans-serif; }
